# test

./: README.md
qt/dachung/: CMakeLists.txt
qt/helloworld/: main.qml
qt/logintest/: CMakeLists.txt  appqmltest.qrc  backend.cpp  backend.h  main.cpp
qt/logintest/qml/: GaugeView.qml
qt/picturetest/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui
qt/qmltest/: CMakeLists.txt  main.cpp
qt/qmltest/images/: resources.qrc
qt/qmltest/qml/: DashboardPage.qml  GaugeView.qml  Main.qml  NavigationButton.qml
qt/testproject/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  mycanvas.cpp  mycanvas.h
qt/testproject/images/: resources.qrc
